[project]
name = "myreinflow"
version = "0.1.0"
description = "ReinFlow: Flow-based RL/IL baselines (FQL, BC) with Minari integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"torch>=2.1",
	"numpy>=1.23",
	"tqdm>=4.66",
	"gymnasium>=0.29",
	"minari>=0.4",
	"einops>=0.7",
	"wandb>=0.16; python_version >= '3.10'",
]
